# otus4

./: .gitignore  .travis.yml  CMakeLists.txt  Doxyfile  print_ip.cpp
html/: annotated.html  classes.html  files.html  functions.html  functions_func.html  globals.html  globals_defs.html  globals_func.html  graph_legend.html  index.html  print__ip_8cpp.html  print__ip_8cpp__incl.map  print__ip_8cpp__incl.md5  struct_tuple_printer-members.html  struct_tuple_printer.html  struct_tuple_printer_3_01_tuple_00_011_01_4-members.html  struct_tuple_printer_3_01_tuple_00_011_01_4.html  version_8h.html  version_8h_source.html
html/search/: all_0.js  all_1.js  all_2.js  files_0.js  functions_1.js  search.js
latex/: annotated.tex  files.tex  print__ip_8cpp.tex  print__ip_8cpp__incl.md5  refman.tex  struct_tuple_printer.tex  struct_tuple_printer_3_01_tuple_00_011_01_4.tex  version_8h.tex
